tests/calico_testcases/example_policies/testcase14-icmp/testcase14-kube-system-match-default-only-out-icmp.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: kube-system-match-only-to-default
  namespace: kube-system
spec:
  selector: tier == 'frontend'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: ICMP
    icmp:
      type: 105
      code: 54
    source:
      namespaceSelector: unique-label == 'defaultNameSpace'
  - action: Allow
    protocol: ICMP
    icmp:
      type: 100
      code: 230
    source:
      selector: app  == 'keepalived-watcher'
  egress:
  - action: Allow
    protocol: ICMPv6
    icmp:
      type: 100
      code: 230
    destination:
      selector: app  == 'keepalived-watcher'
