tests/calico_testcases/example_policies/testcase14-icmp/testcase14-kube-system-no-match-notICMP.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: kube-system-not-matching-notICMP-single-rule
  namespace: kube-system
spec:
  selector: tier == 'frontend'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: ICMP
    notICMP:
      type: 204
      code: 54
    source:
      selector: !has(app)
  egress:
  - action: Allow
    protocol: ICMP
    icmp:
      type: 204
      code: 54
    destination:
      selector: !has(app)
